separate state of main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,9 @@
     <string name="text_log_out">LogOut</string>
     <string name="description_icon_draw_menu">Icono de el destino de navegacion</string>
 
+    <!-- label navigation -->
+
+
+
 
 </resources>
