--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,8 @@
 
     <string name="description_show_password">Muesta la contraseña</string>
     <string name="description_hide_password">Oculta la contraseña</string>
+    <string name="description_email_open">El email ya fue leido</string>
+    <string name="description_email_pending">El email no a sido leido</string>
 
 
 </resources>
