--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -100,5 +100,6 @@
     <string name="description_email_pending">The email has not been read</string>
     <string name="title_edit_info_personal">Edit personal information</string>
     <string name="message_empty_project">There are no projects to show</string>
+    <string name="message_empty_info_user">La informacion del usuario esta vacia</string>
 
 </resources>
