--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,6 @@
     <string name="description_email_pending">El email no ha sido leído</string>
 
     <string name="title_edit_info_personal">Editar información personal</string>
+    <string name="message_empty_info_user">La información del usuario está vacía</string>
 
 </resources>
