--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,7 +143,7 @@
     <string name="title_lock_screen">Null App Bloqueado</string>
     <string name="text_lauch_biometric">Lance el lector de biométrico</string>
     <string name="text_biometric_disable">Demasiados intentos fallidos, sensor deshabilitado</string>
-    <string name="text_time_out_lock">Demasiados intentos, vuelta a intentarlo en %l</string>
+    <string name="text_time_out_lock">Demasiados intentos, vuelta a intentarlo en %d</string>
     <string name="text_button_unlock">Desbloquear</string>
     <string name="text_title_unlock_app">Escanea tu huella para desbloquear la app</string>
     <string name="text_title_cancel">Cancelar</string>
