--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -116,4 +116,5 @@
     <string name="text_title_unlock_app">Scan your fingerprint to unlock the app</string>
     <string name="text_title_cancel">Cancel</string>
     <string name="title_text_enable_lock_app">Scan your fingerprint to enable lock</string>
+    <string name="error_invalid_data">Verifique sus datos</string>
 </resources>
