--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,153 +1,125 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NullSiteAdmin</string>
-
-    <string name="description_icon_back">Icono de retroceder</string>
-    <string name="description_drawer_menu">Icono para abrir el menú</string>
-
-    <!-- edit info admin -->
-
-    <string name="description_current_img_profile">Imagen de perfil actual</string>
-    <string name="description_edit_img_profile">Inicia la interfaz para seleccionar una nueva imagen de perfil</string>
-
-    <string name="label_name_admin">Nombre de perfil</string>
-    <string name="error_name_admin_empty">El nombre no puede estar vacío</string>
-    <string name="error_name_admin_length">El nombre no puede ser tan largo</string>
-    <string name="hint_name_admin">Escribe un nombre</string>
-
-    <string name="label_profession_admin">Perfil</string>
-    <string name="error_profess_admin_empty">La profesión es requerida</string>
-    <string name="error_profess_admin_length">La profession es muy larga</string>
-    <string name="hint_profession_admin">Escribe la profesión</string>
-
-    <string name="label_description_admin">Descripción</string>
-    <string name="error_description_admin_empty">La descripción es muy importante</string>
-    <string name="error_description_admin_length">La descripción debe ser corta y concisa</string>
-    <string name="hint_description_admin">Escribe una descripción breve</string>
-
-    <string name="error_no_data_change">No hay cambios que guardar</string>
-
-    <!-- edit project -->
-    <string name="label_name_project">Nombre del proyecto</string>
-    <string name="hint_name_project">Escribe el nombre del proyecto</string>
-    <string name="error_empty_name_project">El proyecto necesita un nombre</string>
-    <string name="error_length_name_project">El nombre del proyecto no puede ser tan largo</string>
-
-    <string name="label_description_project">Descripción del proyecto</string>
-    <string name="hint_description_project">Escribe una descripción del proyecto</string>
-    <string name="error_description_project">La descripción no puede estar vacía</string>
-    <string name="error_length_description_project">La descripción no puede ser tan larga</string>
-
-    <string name="label_repo_project">Link del Proyecto</string>
-    <string name="hint_repo_project">Escribe el link del proyecto</string>
-    <string name="error_empty_link_project">El link no puede estar vacío</string>
-    <string name="error_length_link_project">El link no puede ser tan largo</string>
-    <string name="hint_img_project">Proporciona el link de la imagen</string>
-    <string name="label_img_project">Link de la imagen</string>
-
-    <!-- text buttons -->
-    <string name="title_edit_project">Editar Proyecto</string>
-    <string name="text_update_project">Actualiza el proyecto</string>
-    <string name="text_save_personal_info">Guardar información</string>
-    <string name="description_current_img_project">Imagen del proyecto actual</string>
-    <string name="text_edit_button">Editar</string>
-
-    <!-- screen project -->
-    <string name="message_error_project">Error al cargar el proyecto</string>
-    <string name="description_icon_edit">Icono de editar</string>
-    <string name="message_empty_project">No hay proyectos que mostrar</string>
-
-    <!-- screen info profile -->
-    <string name="message_error_load_info_user">Hubo un error al cargar los datos</string>
-    <string name="description_edit_info_user">Icono para ir a la edición de la información del usuario</string>
-
-    <!-- screen contact-->
-    <string name="message_error_contact">Error al cargar los emails</string>
-    <string name="message_empty_contact">La bandeja de entrada esta vacia</string>
-    <string name="text_number_emails">Número de emails: %d</string>
-    <string name="text_to_email">De: %s</string>
-    <string name="text_subject_email">Asunto: %s</string>
-    <string name="text_date_email">Fecha: %s</string>
-    <string name="description_deleter_email">Icono de eliminar, para eliminar el email</string>
-
-    <!-- screen auth -->
+    <string name="description_icon_back">Back icon</string>
+    <string name="description_drawer_menu">Icon to open the menu</string>
+    <string name="description_current_img_profile">Current profile picture</string>
+    <string name="description_edit_img_profile">Launches the interface to select a new profile picture</string>
+    <string name="label_name_admin">Name of profile</string>
+    <string name="error_name_admin_empty">Name cannot be empty</string>
+    <string name="error_name_admin_length">The name can\'t be that long</string>
+    <string name="hint_name_admin">Write a name</string>
+    <string name="label_profession_admin">Profile</string>
+    <string name="error_profess_admin_empty">Profession is required</string>
+    <string name="error_profess_admin_length">The profession is very long</string>
+    <string name="hint_profession_admin">Write the profession</string>
+    <string name="label_description_admin">Description</string>
+    <string name="error_description_admin_empty">Description is very important</string>
+    <string name="error_description_admin_length">The description should be short and concise</string>
+    <string name="hint_description_admin">Write a short description</string>
+    <string name="error_no_data_change">There are no changes to save</string>
+    <string name="label_name_project">Project\'s name</string>
+    <string name="hint_name_project">Write the name of the project</string>
+    <string name="error_empty_name_project">The project needs a name</string>
+    <string name="error_length_name_project">The project name cannot be that long</string>
+    <string name="label_description_project">Project description</string>
+    <string name="hint_description_project">Write a description of the project</string>
+    <string name="error_description_project">Description cannot be empty</string>
+    <string name="error_length_description_project">The description can\'t be that long</string>
+    <string name="label_repo_project">Project Link</string>
+    <string name="hint_repo_project">Write the link of the project</string>
+    <string name="error_empty_link_project">The link cannot be empty</string>
+    <string name="error_length_link_project">The link can\'t be that long</string>
+    <string name="hint_img_project">Provide the link of the image</string>
+    <string name="label_img_project">Image link</string>
+    <string name="title_edit_project">Edit Project</string>
+    <string name="text_update_project">Update the project</string>
+    <string name="text_save_personal_info">Save information</string>
+    <string name="description_current_img_project">Image of the current project</string>
+    <string name="text_edit_button">Edit</string>
+    <string name="message_error_project">Error loading project</string>
+    <string name="description_icon_edit">Edit icon</string>
+    <string name="message_error_load_info_user">There was an error loading the data</string>
+    <string name="description_edit_info_user">Icon to go to user information editing</string>
+    <string name="message_error_contact">Error loading emails</string>
+    <string name="message_empty_contact">The inbox is empty</string>
+    <string name="text_number_emails">Number of emails: %d</string>
+    <string name="text_to_email">To: %s</string>
+    <string name="text_subject_email">Subject: %s</string>
+    <string name="text_date_email">Date: %s</string>
+    <string name="description_deleter_email">Delete icon, to delete the email</string>
     <string name="label_email">Email</string>
-    <string name="hint_email">Escribe tu email</string>
-    <string name="error_empty_email">Se necesita el correo</string>
-    <string name="error_length_email">El email no puede ser tan largo</string>
-    <string name="label_password">Contraseña</string>
-    <string name="hint_password">Escribe la contraseña</string>
-    <string name="error_empty_passwod">La contraseña es indispensable</string>
-    <string name="error_length_password">La contraseña no puede ser tan larga</string>
-    <string name="description_img_web">Imagen de portada del sitio web</string>
-    <string name="description_close_session">Icono de cerrar sesión</string>
-    <string name="text_log_out">Cerrar sesión</string>
-    <string name="description_icon_draw_menu">Icono del destino de navegación</string>
-    <string name="text_auth_button">Autenticar</string>
-    <string name="description_logo_app">Icono principal de la aplicación</string>
+    <string name="hint_email">Write your email</string>
+    <string name="error_empty_email">Mail is needed</string>
+    <string name="error_length_email">The email cannot be that long</string>
+    <string name="label_password">Password</string>
+    <string name="hint_password">Type the password</string>
+    <string name="error_empty_passwod">The password is essential</string>
+    <string name="error_length_password">The password cannot be that long</string>
+    <string name="description_img_web">Website cover image</string>
+    <string name="description_close_session">Sign out icon</string>
+    <string name="text_log_out">Log out</string>
+    <string name="description_icon_draw_menu">Navigation destination icon</string>
+    <string name="text_auth_button">Authenticate</string>
+    <string name="description_logo_app">App main icon</string>
+    <string name="error_unkown">Unknown error</string>
+    <string name="error_data_invalid">Invalid data</string>
+    <string name="error_authenticated">Check your credentials</string>
+    <string name="text_select_option">Select an option</string>
+    <string name="option_img_camera">Camera</string>
+    <string name="description_img_camera">Take a photo</string>
+    <string name="option_img_gallery">Gallery</string>
+    <string name="description_img_gallery">Select a photo from the gallery</string>
+    <string name="error_compress_img">Error selecting image</string>
+    <string name="error_upload_info">Error uploading changes</string>
+    <string name="message_change_upload">Changes saved</string>
+    <string name="message_cancel_upload">Update was canceled</string>
+    <string name="message_init_upload">Uploading changes</string>
+    <string name="error_load_list_email">Error to load emails list</string>
+    <string name="error_deleter_email">Error deleting email</string>
+    <string name="error_load_info_user">Error loading user information</string>
+    <string name="message_data_upload">Updated data</string>
+    <string name="error_data_user_upload">Error to update info user</string>
+    <string name="error_load_project">Error while loading projects</string>
+    <string name="message_upload_project">Updated project</string>
+    <string name="message_error_upload_project">Error while edit project</string>
+    <string name="name_channel_upload">Update progress</string>
+    <string name="title_upload_notify">Updating data</string>
+    <string name="name_Action_stop">Stop</string>
+    <string name="name_channel_contact">Contact messages</string>
+    <string name="title_notify_new_email">New Email</string>
+    <string name="back_again">Press it again</string>
 
-    <string name="error_unkown">Error desconocido</string>
-    <string name="error_data_invalid">Datos inválidos</string>
-    <string name="error_authenticated">Verifique sus credenciales</string>
+    <string name="description_reply_email">Reply to the current email</string>
+    <string name="title_email_details">Email Details</string>
+    <string name="message_deleter_email_success">Email deleted successfully</string>
+    <string name="description_show_password">Show the password</string>
+    <string name="description_hide_password">Hide the password</string>
 
-    <!-- label navigation -->
+    <string name="description_email_open">The email has already been read</string>
+    <string name="description_email_pending">The email has not been read</string>
+    <string name="title_edit_info_personal">Edit personal information</string>
+    <string name="message_empty_project">There are no projects to show</string>
+    <string name="message_empty_info_user">User information is empty</string>
+    <string name="error_network">Check your internet connection</string>
+    <string name="error_time_out">The server did not respond, please try</string>
+    <string name="error_unknown">Unknown error</string>
+    <string name="error_user_not_found">User not found</string>
 
-
-    <!-- select imager picker -->
-    <string name="text_select_option">Selecciona una opción</string>
-    <string name="option_img_camera">Cámara</string>
-    <string name="description_img_camera">Toma una foto</string>
-    <string name="option_img_gallery">Galería</string>
-    <string name="description_img_gallery">Seleccione una foto de la galería</string>
-    <string name="error_compress_img">Error al seleccionar la imagen</string>
-
-    <!-- services upload -->
-    <string name="error_upload_info">Error al subir los cambios</string>
-    <string name="message_change_upload">Cambios Guardados</string>
-    <string name="message_cancel_upload">Se canceló la actualización</string>
-    <string name="message_init_upload">Subiendo Cambios</string>
-    <string name="error_load_list_email">Error al cargar la lista de emails</string>
-    <string name="error_deleter_email">Error al eliminar el email</string>
-    <string name="error_load_info_user">Error al cargar la información del usuario</string>
-    <string name="message_data_upload">Datos actualizados</string>
-    <string name="error_data_user_upload">Error al actualizar la información del usuario</string>
-    <string name="error_load_project">Error al cargar proyectos</string>
-    <string name="message_upload_project">Proyecto actualizado</string>
-    <string name="message_error_upload_project">Error al editar proyecto</string>
-
-
-    <!-- services -->
-    <string name="name_channel_upload">Progreso de la actualización</string>
-    <string name="title_upload_notify">Actualizando datos</string>
-    <string name="name_Action_stop">Detener</string>
-    <string name="name_channel_contact">Mensajes de contacto</string>
-    <string name="title_notify_new_email">Nuevo Email</string>
-    <string name="back_again">Presione nuevamente</string>
-    <string name="description_reply_email">Contestar el email actual</string>
-    <string name="title_email_details">Detalles del Email</string>
-    <string name="message_deleter_email_success">Email eliminado con éxito</string>
-    <string name="description_img_profile_placeholder" translatable="false">Imagen profile placeholder</string>
-
-    <string name="description_show_password">Muesta la contraseña</string>
-    <string name="description_hide_password">Oculta la contraseña</string>
-    <string name="description_email_open">El email ya fue leído</string>
-    <string name="description_email_pending">El email no ha sido leído</string>
-
-    <string name="title_edit_info_personal">Editar información personal</string>
-    <string name="message_empty_info_user">La información del usuario está vacía</string>
-    <string name="error_network">Verifique su conexión a internet</string>
-    <string name="error_time_out">El servidor no response, reintente</string>
-    <string name="error_unknown">Error desconocido</string>
-    <string name="error_user_not_found">Usuario no encontrado</string>
+    <string name="title_lock_screen">NullSiteApp Locked</string>
+    <string name="text_lauch_biometric">Launch biometric reader</string>
+    <string name="text_biometric_disable">Too many failed attempts, sensor disabled</string>
+    <string name="text_time_out_lock">Too many attempts, please try again in %l</string>
+    <string name="text_button_unlock">Unlock</string>
 
 
-    <string name="title_lock_screen">Null App Bloqueado</string>
-    <string name="text_lauch_biometric">Lance el lector de biométrico</string>
-    <string name="text_biometric_disable">Demasiados intentos fallidos, sensor deshabilitado</string>
-    <string name="text_time_out_lock">Demasiados intentos, vuelta a intentarlo en %d</string>
-    <string name="text_button_unlock">Desbloquear</string>
-    <string name="text_title_unlock_app">Escanea tu huella para desbloquear la app</string>
-    <string name="text_title_cancel">Cancelar</string>
-    <string name="title_text_enable_lock_app">Escanea tu huella para habilitar el bloqueo</string>
-    <string name="error_invalid_data">Verifique sus datos</string>
+    <string name="text_title_unlock_app">Scan your fingerprint to unlock the app</string>
+    <string name="text_title_cancel">Cancel</string>
+    <string name="title_text_enable_lock_app">Scan your fingerprint to enable lock</string>
+
+    <string name="error_invalid_data">Check your details</string>
+    <string name="biometric_no_avariable">fingerprint is not available</string>
+    <string name="title_biometric">Fingerprint lock</string>
+    <string name="description_enable_biometric">If you enable this option, unlocking by fingerprint will be required when entering the app</string>
 
 </resources>
